tests/baselines/reference/iterableArrayPattern28.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(1,33): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(1,33): error TS2501: A rest element cannot contain a binding pattern.
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(2,32): error TS2345: Argument of type '([文字, 数字] | [文字, 真假])[]' is not assignable to parameter of type 'Iterable<[文字, 数字]>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => IterableIterator<[文字, 数字] | [文字, 真假]>' is not assignable to type '() => Iterator<[文字, 数字]>'.
      Type 'IterableIterator<[文字, 数字] | [文字, 真假]>' is not assignable to type 'Iterator<[文字, 数字]>'.
        Types of property 'next' are incompatible.
          Type '(value?: 任意) => IteratorResult<[文字, 数字] | [文字, 真假]>' is not assignable to type '(value?: 任意) => IteratorResult<[文字, 数字]>'.
            Type 'IteratorResult<[文字, 数字] | [文字, 真假]>' is not assignable to type 'IteratorResult<[文字, 数字]>'.
              Type '[文字, 数字] | [文字, 真假]' is not assignable to type '[文字, 数字]'.
                Type '[文字, 真假]' is not assignable to type '[文字, 数字]'.
                  Type '真假' is not assignable to type '数字'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts (3 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '([文字, 数字] | [文字, 真假])[]' is not assignable to parameter of type 'Iterable<[文字, 数字]>'.
!!! error TS2345:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2345:     Type '() => IterableIterator<[文字, 数字] | [文字, 真假]>' is not assignable to type '() => Iterator<[文字, 数字]>'.
!!! error TS2345:       Type 'IterableIterator<[文字, 数字] | [文字, 真假]>' is not assignable to type 'Iterator<[文字, 数字]>'.
!!! error TS2345:         Types of property 'next' are incompatible.
!!! error TS2345:           Type '(value?: 任意) => IteratorResult<[文字, 数字] | [文字, 真假]>' is not assignable to type '(value?: 任意) => IteratorResult<[文字, 数字]>'.
!!! error TS2345:             Type 'IteratorResult<[文字, 数字] | [文字, 真假]>' is not assignable to type 'IteratorResult<[文字, 数字]>'.
!!! error TS2345:               Type '[文字, 数字] | [文字, 真假]' is not assignable to type '[文字, 数字]'.
!!! error TS2345:                 Type '[文字, 真假]' is not assignable to type '[文字, 数字]'.
!!! error TS2345:                   Type '真假' is not assignable to type '数字'.